--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "jade": "~1.11.0",
+    "mongodb": "^2.2.22",
+    "mongoose": "^4.7.8",
     "morgan": "~1.7.0",
     "node-sass-middleware": "0.9.8",
     "serve-favicon": "~2.3.0",
