--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "~1.7.0",
     "node-sass-middleware": "0.9.8",
     "serve-favicon": "~2.3.0",
-    "socket.io": "~1.7.2"
+    "socket.io": "~1.7.2",
+    "underscore": "1.8.3"
   }
 }
